--- a/freeboard_frontend/package.json
+++ b/freeboard_frontend/package.json
@@ -19,6 +19,7 @@
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-player": "^2.9.0",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1"
   },
