--- a/freeboard_frontend/package.json
+++ b/freeboard_frontend/package.json
@@ -24,7 +24,8 @@
     "react-infinite-scroller": "^1.2.4",
     "react-player": "^2.9.0",
     "react-slick": "^0.28.1",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.31.1",
