--- a/freeboard_frontend/package.json
+++ b/freeboard_frontend/package.json
@@ -17,6 +17,7 @@
     "antd": "^4.16.13",
     "apollo-upload-client": "^16.0.0",
     "axios": "^0.21.1",
+    "dompurify": "^2.3.3",
     "graphql": "^15.5.1",
     "next": "11.1.0",
     "react": "17.0.2",
@@ -25,6 +26,7 @@
     "react-hook-form": "^7.17.1",
     "react-infinite-scroller": "^1.2.4",
     "react-player": "^2.9.0",
+    "react-quill": "^1.3.5",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
     "uuid": "^8.3.2",
