--- a/class/package.json
+++ b/class/package.json
@@ -16,7 +16,8 @@
     "@emotion/styled": "^11.3.0",
     "@hookform/resolvers": "^2.8.2",
     "@material-ui/core": "^4.12.3",
-    "antd": "^4.16.13",
+    "@material-ui/styles": "^4.11.4",
+    "antd": "^4.18.5",
     "apollo-upload-client": "^16.0.0",
     "axios": "^0.21.1",
     "dompurify": "^2.3.3",
